# sql-module

./: .gitignore  README.md  pyproject.toml  setup.cfg
sql_module/: __init__.py
sql_module/exceptions/: __init__.py
sql_module/sqlite/: definition.py  driver.py  placeholder.py  query.py  sqlite.py
sql_module/sqlite/table/: info.py  name.py  sql_value.py  sub_query.py  table.py  value.py
sql_module/sqlite/table/column/: column.py  column_constraint.py  interface.py  name.py
sql_module/sqlite/table/create/: composite_constraint.py  create.py  query_builder.py
sql_module/sqlite/table/expression/base/: __init__.py  base.py
sql_module/sqlite/table/expression/cond/: __init__.py  cond.py
sql_module/sqlite/table/expression/func/: __init__.py  func.py
sql_module/sqlite/table/expression/join/: join.py
sql_module/sqlite/table/expression/order/: order.py
sql_module/sqlite/table/index/: query_builder.py
sql_module/sqlite/table/insert/: insert.py  query_builder.py
sql_module/sqlite/table/record/: record.py
sql_module/sqlite/table/select/: query_builder.py
sql_module/sqlite/table/update/: query_builder.py  update.py
sql_module/sqlite/table/where/: __init__.py  where.py
sql_module/utils/: __init__.py  log.py  str_.py  timer.py
tests/: info.py  test1.py  x.py
tests/x/: select.py  x_normal.py  x_scd2.py
