[project]
name = "sql-module"
version = "1.5.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "logging-module",
]

[tool.setuptools.packages.find]
include = ["sql_module", "sql_module.*"]

[tool.uv.sources]
logging-module = { git = "https://github.com/yaiyaiyank/logging-module" }
